--- a/bilibili.conf
+++ b/bilibili.conf
@@ -2,5 +2,5 @@ hostname = api.bilibili.com
 
 
 #解锁B站大会员
-https:\/\/api\.bilibili\.com\/pgc\/player\/api\/playurl url 302 http://api.bili.best:22333/geturl/868550/
+https:\/\/api\.bilibili\.com\/pgc\/player\/api\/playurl url 302 http://api.bili.best:22333/geturl/100004950120022400070131412515868550/
 https:\/\/api.bilibili.com\/pgc\/view\/app\/season url 302 http://api.bili.best:22333/season/x/
