--- a/bilibili.conf
+++ b/bilibili.conf
@@ -1,6 +1,5 @@
 hostname = api.bilibili.com
 
 
-#解锁B站大会员
-https:\/\/api\.bilibili\.com\/pgc\/player\/api\/playurl url 302 http://api.bili.best:22333/geturl/z666tx/
-https:\/\/api.bilibili.com\/pgc\/view\/app\/season url 302 http://api.bili.best:22333/season/x/
+https:\/\/api\.bilibili\.com\/pgc\/player\/api\/playurl url 302 http://api.bili.best:22444/geturl/HGcMLdwv/
+https:\/\/api.bilibili.com\/pgc\/view\/app\/season url 302 http://api.bili.best:22444/season/x/
