--- a/bilibili.conf
+++ b/bilibili.conf
@@ -1,5 +1,5 @@
 hostname = api.bilibili.com
 
 
-https:\/\/api\.bilibili\.com\/pgc\/player\/api\/playurl url 302 http://api.bili.best:22444/geturl/HGcMLdwv/
-https:\/\/api.bilibili.com\/pgc\/view\/app\/season url 302 http://api.bili.best:22444/season/x/
+https:\/\/api\.bilibili\.com\/pgc\/player\/api\/playurl url 302 http://api.bili.best:2300/playurl
+https:\/\/api.bilibili.com\/pgc\/view\/app\/season url 302 http://api.bili.best:2300/season
